[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notion2markdown"
version = "0.2.2"
authors = [{ name = "rysk-lunch" }]
description = "Export notion pages to markdown in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["notion-client"]

[tool.setuptools.packages.find]
include = ["notion2markdown"]

[project.scripts]
notion2markdown = "notion2markdown.cli:main"
n2md = "notion2markdown.cli:main"
